# edgar

./: .env.example  .gitignore  README.md  dump_to_csv.py  edgar_scraper.py  executives.csv  executives_old.csv  parse_exec_compensation.py  pyproject.toml  requirements.txt  schema.py  test_edgar.py  test_parser.py  todo.md
archive/: executives.csv  executives_old.csv
docs/: architecture.md  repository-analysis.md
